class empty para borrar values

--- a/html/abmCarreras.html
+++ b/html/abmCarreras.html
@@ -67,7 +67,7 @@
           <div class="col-md-2">
             <!-- Input de Carrera -->
             <label>Nombre de la Carrera</label>
-            <input id="carrera_alta" type="text">
+            <input class="empty" id="carrera_alta" type="text">
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
           <div class="col-md-2">
             <!-- Input de Carrera -->
             <label>Nombre de la Carrera</label>
-            <select class="carrera" id="carrera_baja">
+            <select class="carrera empty" id="carrera_baja">
               <option></option>
             </select>
           </div>
@@ -105,14 +105,14 @@
           <div class="col-md-2">
             <!-- Input de Carrera -->
             <label>Nombre de la Carrera</label>
-            <select class="carrera" id="carrera_modificacion">
+            <select class="carrera empty" id="carrera_modificacion">
               <option></option>
             </select>
           </div>
           <div class="col-md-2">
             <!-- Input de Carrera -->
             <label>Nombre de la nueva Carrera</label>
-            <input type="text" id="nueva_carrera_modificacion">
+            <input class="empty" type="text" id="nueva_carrera_modificacion">
           </div>
         </div>
       </div>
