--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -64,24 +64,24 @@
                     <div class="col-md-4">
                         <!-- Seleccion de catedra -->
                         <label>Catedra</label>
-                        <input type="text" id="catedra_alta">
+                        <input class="empty" type="text" id="catedra_alta">
                     </div>
                     <div class="col-md-4">
                         <!-- Seleccion de materia -->
                         <label>Materia</label>
-                        <select class="materia" id="materia_alta">
+                        <select class="materia empty" id="materia_alta">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-4">
                         <!-- Seleccion de nombre -->
                         <label>Nombre</label>
-                        <input type="text" id="nombre_alta">
+                        <input class="empty" type="text" id="nombre_alta">
                     </div>
                     <div class="col-md-5">
                         <!-- Seleccion de titular de catedra -->
                         <label>Titular de Catedra</label>
-                        <input type="text" id="titularDeCatedra_alta">
+                        <input class="empty" type="text" id="titularDeCatedra_alta">
                     </div>
                     <br>
                     <br>
@@ -90,7 +90,7 @@
                     <div class="col-md-12">
                         <!-- Seleccion de dias -->
                         <label>Dias</label>
-                        <select class="dia" id="dia_alta">
+                        <select class="dia empty" id="dia_alta">
                             <option value="0">Lunes</option>
                             <option value="1">Martes</option>
                             <option value="2">Miercoles</option>
@@ -102,7 +102,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de inicio de horario -->
                         <label>Inicio</label>
-                        <select class="hora_inicio" id="hora_inicio_alta">
+                        <select class="hora_inicio empty" id="hora_inicio_alta">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -124,7 +124,7 @@
                     <div class="col-md-4">
                         <label>Fin</label>
                         <!-- Seleccion de fin de horario -->
-                        <select class="hora_fin" id="hora_fin_alta">
+                        <select class="hora_fin empty" id="hora_fin_alta">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -158,14 +158,14 @@
                     <div class="col-md-4">
                         <!-- Seleccion de Catedras -->
                         <label>Catedras</label>
-                        <select class="catedra" id="catedra_baja">
+                        <select class="catedra empty" id="catedra_baja">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-4">
                         <!-- Seleccion de materia -->
                         <label>Materia</label>
-                        <select class="materia" id="materia_baja">
+                        <select class="materia empty" id="materia_baja">
                             <option></option>
                         </select>
                     </div>
@@ -183,26 +183,26 @@
                         <div class="col-md-4">
                             <!-- Seleccion de Catedras -->
                             <label>Catedras</label>
-                            <select class="catedra" id="catedra_modificacion">
+                            <select class="catedra empty" id="catedra_modificacion">
                                 <option></option>
                             </select>
                         </div>
                         <div class="col-md-4">
                         <!-- Seleccion de materia -->
                         <label>Materia</label>
-                        <select class="materia" id="materia_modificacion">
+                        <select class="materia empty" id="materia_modificacion">
                             <option></option>
                         </select>
                     </div>
                     <div class="col-md-4">
                         <!-- Seleccion de nombre -->
                         <label>Nombre</label>
-                        <input type="text" id="nombre_baja">
+                        <input class="empty" type="text" id="nombre_baja">
                     </div>
                     <div class="col-md-5">
                         <!-- Seleccion de titular de catedra -->
                         <label>Titular de Catedra</label>
-                        <input type="text" id="titularDeCatedra_modificacion">
+                        <input class="empty" type="text" id="titularDeCatedra_modificacion">
                     </div>
                     <br>
                     <br>
@@ -211,7 +211,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de dias -->
                         <label>Dias</label>
-                        <select class="dia" id="dia_modificacion">
+                        <select class="dia empty" id="dia_modificacion">
                             <option value="0">Lunes</option>
                             <option value="1">Martes</option>
                             <option value="2">Miercoles</option>
@@ -223,7 +223,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de inicio de horario -->
                         <label>Inicio</label>
-                        <select class="hora_inicio" id="hora_inicio_modificacion">
+                        <select class="hora_inicio empty" id="hora_inicio_modificacion">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -245,7 +245,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de fin de horario -->
                         <label>Fin</label>
-                        <select class="hora_fin" id="hora_fin_modificacion">
+                        <select class="hora_fin empty" id="hora_fin_modificacion">
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
