--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -220,28 +220,28 @@
           <div class="col-md-4">
             <!-- Seleccion de Catedra -->
             <label>Catedra</label>
-            <select class="catedra" id="catedra_modificacion">
+            <select class="catedra empty" id="catedra_modificacion">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Carrera -->
             <label>Carrera</label>
-            <select class="carrera" id="carrera_modificacion">
+            <select class="carrera empty" id="carrera_modificacion">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Materia -->
             <label>Materia</label>
-            <select class="materia" id="materia_modificacion">
+            <select class="materia empty" id="materia_modificacion">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de dias -->
             <label>Dias</label>
-            <select class="dia" id="dia_modificacion">
+            <select class="dia empty" id="dia_modificacion">
               <option value="0">Lunes</option>
               <option value="1">Martes</option>
               <option value="2">Miercoles</option>
@@ -253,7 +253,7 @@
           <div class="col-md-4">
             <!-- Seleccion de Horario -->
             <label>Horario</label>
-            <select class="horario" id="horario_modificacion">
+            <select class="horario empty" id="horario_modificacion">
               <option value="0">7:00hs</option>
               <option value="1">8:00hs</option>
               <option value="2">9:00hs</option>
@@ -275,13 +275,13 @@
           <div class="col-md-4">
             <!-- Seleccion de Alumno -->
             <label>Alumno</label>
-            <select class="alumnos" id="alumnos_modificacion">
+            <select class="alumnos empty" id="alumnos_modificacion">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Presente -->
-            <label class="radioPresente">Presente
+            <label class="radioPresente empty">Presente
               <input type="radio" name="postage_modificacion" value="true" id="radioPresente_si_modificacion"> Si
               <input type="radio" name="postage_modificacion" value="false" id="radioPresente_no_modificacion"> No</label>
           </div>
