--- a/html/abmNotas.html
+++ b/html/abmNotas.html
@@ -64,17 +64,17 @@
             <br>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <!-- Seleccion de Carrera -->
-                        <label>Carrera</label>
-                        <select class="carrera empty" id="carrera_alta">
-                            <option></option>
-                        </select>
-                    </div>
                     <div class="col-md-3">
                         <!-- Seleccion de Catedra -->
                         <label>Catedra</label>
                         <select class="catedra empty" id="catedra_alta">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <!-- Seleccion de Carrera -->
+                        <label>Carrera</label>
+                        <select class="carrera empty" id="carrera_alta">
                             <option></option>
                         </select>
                     </div>
@@ -112,111 +112,111 @@
             </div>
         </div>
     </form>
-        <!-- Dar de baja una catedra -->
-        <form id="form_baja">
-            <div class="baja">
-                <!-- Titulo -->
-                <h1>Baja de nota</h1>
-                <br>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <!-- Seleccion de Carrera -->
-                            <label>Carrera</label>
-                            <select class="carrera empty" id="carrera_baja">
-                                <option></option>
-                            </select>
-                        </div>
-                        <div class="col-md-4">
-                            <!-- Seleccion de Catedra -->
-                            <label>Catedra</label>
-                            <select class="catedra empty" id="catedra_baja">
-                                <option></option>
-                            </select>
-                        </div>
-                        <div class="col-md-4">
-                            <label>Materia</label>
-                            <!-- Seleccion de Materia -->
-                            <select class="materia empty" id="materia_baja">
-                                <option></option>
-                            </select>
-                        </div>
-                        <div class="col-md-4">
-                            <label>Alumno</label>
-                            <!-- Seleccion de Alumno -->
-                            <select class="alumnos empty" id="alumnos_baja">
-                                <option></option>
-                            </select>
-                        </div>
+    <!-- Dar de baja una catedra -->
+    <form id="form_baja">
+        <div class="baja">
+            <!-- Titulo -->
+            <h1>Baja de nota</h1>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <!-- Seleccion de Catedra -->
+                        <label>Catedra</label>
+                        <select class="catedra empty" id="catedra_baja">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <!-- Seleccion de Carrera -->
+                        <label>Carrera</label>
+                        <select class="carrera empty" id="carrera_baja">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <label>Materia</label>
+                        <!-- Seleccion de Materia -->
+                        <select class="materia empty" id="materia_baja">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <label>Alumno</label>
+                        <!-- Seleccion de Alumno -->
+                        <select class="alumnos empty" id="alumnos_baja">
+                            <option></option>
+                        </select>
                     </div>
                 </div>
             </div>
-        </form>
-            <!-- Modificar una catedra -->
-            <form id="form_modificacion">
-                <div class="modificacion">
-                    <!-- Titulo -->
-                    <h1>Modificacion de nota</h1>
-                    <br>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <!-- Seleccion de Carrera -->
-                                <label>Carrera</label>
-                                <select class="carrera empty" id="carrera_modificacion">
-                                    <option></option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <!-- Seleccion de Catedra -->
-                                <label>Catedra</label>
-                                <select class="catedra empty" id="catedra_modificacion">
-                                    <option></option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <label>Materia</label>
-                                <!-- Seleccion de Materia -->
-                                <select class="materia empty" id="materia_modificacion">
-                                    <option></option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <label>Alumno</label>
-                                <!-- Seleccion de Alumno -->
-                                <select class="alumnos empty" id="alumnos_modificacion">
-                                    <option></option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <label>Nota</label>
-                                <!-- Seleccion de Nota -->
-                                <select class="nota empty" id="nota_modificacion">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                    <option value="7">7</option>
-                                    <option value="8">8</option>
-                                    <option value="9">9</option>
-                                    <option value="10">10</option>
-                                </select>
-                            </div>
-                        </div>
+        </div>
+    </form>
+    <!-- Modificar una catedra -->
+    <form id="form_modificacion">
+        <div class="modificacion">
+            <!-- Titulo -->
+            <h1>Modificacion de nota</h1>
+            <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <!-- Seleccion de Catedra -->
+                        <label>Catedra</label>
+                        <select class="catedra empty" id="catedra_modificacion">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-4">
+                        <!-- Seleccion de Carrera -->
+                        <label>Carrera</label>
+                        <select class="carrera empty" id="carrera_modificacion">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label>Materia</label>
+                        <!-- Seleccion de Materia -->
+                        <select class="materia empty" id="materia_modificacion">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label>Alumno</label>
+                        <!-- Seleccion de Alumno -->
+                        <select class="alumnos empty" id="alumnos_modificacion">
+                            <option></option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label>Nota</label>
+                        <!-- Seleccion de Nota -->
+                        <select class="nota empty" id="nota_modificacion">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                        </select>
                     </div>
                 </div>
-            </form>
-                <!-- Botoon para guardar datos -->
-                <input id="operacion" type="text" style="display:none;">
-                <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
-                <script src="../js/register.js"></script>
-                <script src="../js/login.js"></script>
-                <script src="../js/library.js"></script>
-                <script src="../js/common.js"></script>
-                <script>
-                    function myFunction() {
+            </div>
+        </div>
+    </form>
+    <!-- Botoon para guardar datos -->
+    <input id="operacion" type="text" style="display:none;">
+    <button onclick="myFunction()" type="submit" id="submit">Guardar</button>
+    <script src="../js/register.js"></script>
+    <script src="../js/login.js"></script>
+    <script src="../js/library.js"></script>
+    <script src="../js/common.js"></script>
+    <script>
+        function myFunction() {
             var rc = new RegisterControllerRemote;
             var operacion = $("#operacion").val();
             var json = rc.armarJson("notas", operacion);
@@ -245,6 +245,12 @@
                 objOption.setAttribute("value", element.id);
                 objOption.innerHTML = element.nombre;
                 $(".alumnos").append(objOption);
+            }, this);
+            rc.jsonCarreras.carreras.forEach(function (element) {
+                var objOption = document.createElement("option");
+                objOption.setAttribute("value", element.id);
+                objOption.innerHTML = element.carrera;
+                $(".carrera").append(objOption);
             }, this);
 
             $('input:radio[name="postage"]').change(function () {
