--- a/Carreras/html/administracionDeEmpresas.html
+++ b/Carreras/html/administracionDeEmpresas.html
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                             <!-- Link para Iniciar Sesion -->
-                            <a href="#">Iniciar Sesi&oacute;n</a>
+                            <a href="../../html/login.html">Iniciar Sesi&oacute;n</a>
                         </li>
                 </ul>
             </div>
