fix ABM fichadas

--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -66,28 +66,29 @@
           <div class="col-md-4">
             <!-- Seleccion de Catedra -->
             <label>Catedra</label>
-            <select class="catedra" id="catedra_alta">
+            <select class="catedra empty" id="catedra_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Carrera -->
             <label>Carrera</label>
-            <select class="carrera" id="carrera_alta">
+            <select class="carrera empty" id="carrera_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Materia -->
             <label>Materia</label>
-            <select class="materia" id="materia_alta">
+            <select class="materia empty" id="materia_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de dias -->
             <label>Dias</label>
-            <select class="dia" id="dia_alta">
+            <select class="dia empty" id="dia_alta">
+              <option value=""></option>
               <option value="0">Lunes</option>
               <option value="1">Martes</option>
               <option value="2">Miercoles</option>
@@ -99,7 +100,8 @@
           <div class="col-md-4">
             <!-- Seleccion de Horario -->
             <label>Horario</label>
-            <select class="horario" id="horario_alta">
+            <select class="horario empty" id="horario_alta">
+              <option value=""></option>
               <option value="0">7:00hs</option>
               <option value="1">8:00hs</option>
               <option value="2">9:00hs</option>
@@ -121,13 +123,13 @@
           <div class="col-md-4">
             <!-- Seleccion de Alumno -->
             <label>Alumno</label>
-            <select class="alumnos" id="alumnos_alta">
+            <select class="alumnos empty" id="alumnos_alta">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Presente -->
-            <label class="radioPresente">Presente
+            <label class="radioPresente empty">Presente
               <input type="radio" name="postage_alta" value="true" id="radioPresente_si_alta"> Si
               <input type="radio" name="postage_alta" value="false" id="radioPresente_no_alta"> No</label>
           </div>
@@ -146,28 +148,29 @@
           <div class="col-md-4">
             <!-- Seleccion de Catedra -->
             <label>Catedra</label>
-            <select class="catedra" id="catedra_baja">
+            <select class="catedra empty" id="catedra_baja">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Carrera -->
             <label>Carrera</label>
-            <select class="carrera" id="carrera_baja">
+            <select class="carrera empty" id="carrera_baja">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de Materia -->
             <label>Materia</label>
-            <select class="materia" id="materia_baja">
+            <select class="materia empty" id="materia_baja">
               <option></option>
             </select>
           </div>
           <div class="col-md-4">
             <!-- Seleccion de dias -->
             <label>Dias</label>
-            <select class="dia" id="dia_baja">
+            <select class="dia empty" id="dia_baja">
+              <option value=""></option>
               <option value="0">Lunes</option>
               <option value="1">Martes</option>
               <option value="2">Miercoles</option>
@@ -179,7 +182,8 @@
           <div class="col-md-4">
             <!-- Seleccion de Horario -->
             <label>Horario</label>
-            <select class="horario" id="horario_baja">
+            <select class="horario empty" id="horario_baja">
+              <option value=""></option>
               <option value="0">7:00hs</option>
               <option value="1">8:00hs</option>
               <option value="2">9:00hs</option>
@@ -201,7 +205,7 @@
           <div class="col-md-4">
             <!-- Seleccion de Alumno -->
             <label>Alumno</label>
-            <select class="alumnos" id="alumno_baja">
+            <select class="alumnos empty" id="alumno_baja">
               <option></option>
             </select>
           </div>
@@ -242,6 +246,7 @@
             <!-- Seleccion de dias -->
             <label>Dias</label>
             <select class="dia empty" id="dia_modificacion">
+              <option value=""></option>
               <option value="0">Lunes</option>
               <option value="1">Martes</option>
               <option value="2">Miercoles</option>
@@ -254,6 +259,7 @@
             <!-- Seleccion de Horario -->
             <label>Horario</label>
             <select class="horario empty" id="horario_modificacion">
+              <option value=""></option>
               <option value="0">7:00hs</option>
               <option value="1">8:00hs</option>
               <option value="2">9:00hs</option>
