Fix ABM Catedras

--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -91,6 +91,7 @@
                         <!-- Seleccion de dias -->
                         <label>Dias</label>
                         <select class="dia empty" id="dia_alta">
+                            <option value=""></option>
                             <option value="0">Lunes</option>
                             <option value="1">Martes</option>
                             <option value="2">Miercoles</option>
@@ -103,6 +104,7 @@
                         <!-- Seleccion de inicio de horario -->
                         <label>Inicio</label>
                         <select class="hora_inicio empty" id="hora_inicio_alta">
+                            <option value=""></option>
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -125,6 +127,7 @@
                         <label>Fin</label>
                         <!-- Seleccion de fin de horario -->
                         <select class="hora_fin empty" id="hora_fin_alta">
+                            <option value=""></option>
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -197,7 +200,7 @@
                     <div class="col-md-4">
                         <!-- Seleccion de nombre -->
                         <label>Nombre</label>
-                        <input class="empty" type="text" id="nombre_baja">
+                        <input class="empty" type="text" id="nombre_modificacion">
                     </div>
                     <div class="col-md-5">
                         <!-- Seleccion de titular de catedra -->
@@ -212,6 +215,7 @@
                         <!-- Seleccion de dias -->
                         <label>Dias</label>
                         <select class="dia empty" id="dia_modificacion">
+                            <option value=""></option>
                             <option value="0">Lunes</option>
                             <option value="1">Martes</option>
                             <option value="2">Miercoles</option>
@@ -224,6 +228,7 @@
                         <!-- Seleccion de inicio de horario -->
                         <label>Inicio</label>
                         <select class="hora_inicio empty" id="hora_inicio_modificacion">
+                            <option value=""></option>
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
@@ -246,6 +251,7 @@
                         <!-- Seleccion de fin de horario -->
                         <label>Fin</label>
                         <select class="hora_fin empty" id="hora_fin_modificacion">
+                            <option value=""></option>
                             <option value="0">7:00hs</option>
                             <option value="1">8:00hs</option>
                             <option value="2">9:00hs</option>
