--- a/html/abmUsuarios.html
+++ b/html/abmUsuarios.html
@@ -142,7 +142,7 @@
                     <div>
                         <!-- Input de Mail -->
                         <label>Mail</label>
-                        <select class="mail" id="mail_baja">
+                        <select class="mail empty" id="mail_baja">
                             <option></option>
                         </select>
                     </div>
@@ -161,13 +161,13 @@
                         <div>
                             <!-- Input de Mail -->
                             <label>Mail</label>
-                            <select class="mail" id="mail_modificacion">
+                            <select class="mail empty" id="mail_modificacion">
                                 <option></option>
                             </select>
                         </div>
                         <!-- Seleccion de Rol -->
                         <label>Rol</label>
-                        <select class="rol" id="rol_modificacion">
+                        <select class="rol empty" id="rol_modificacion">
                             <option value=""></option>
                             <option value="administrador">Administrador</option>
                             <option value="alumno">Alumno</option>
@@ -177,27 +177,27 @@
                     <div>
                         <!-- Input de Nombre -->
                         <label>Nombre</label>
-                        <input type="text" id="nombre_modificacion">
+                        <input type="text" class="empty" id="nombre_modificacion">
                     </div>
                     <div>
                         <!-- Input de Apellido -->
                         <label>Apellido</label>
-                        <input type="text" id="apellido_modificacion">
+                        <input type="text" class="empty" id="apellido_modificacion">
                     </div>
                     <div>
                         <!-- Input de Documento -->
                         <label>Documento</label>
-                        <input type="number" id="documento_modificacion">
+                        <input type="number" class="empty" id="documento_modificacion">
                     </div>
                     <div>
                         <!-- Input de Fecha de Nacimiento -->
                         <label>Fecha de Nacimiento</label>
-                        <input type="date" id="fnac_modificacion">
+                        <input type="date" class="empty" id="fnac_modificacion">
                     </div>
                     <div>
                         <!-- Seleccion de Documento -->
                         <label>Genero</label>
-                        <select class="genero" id="genero_modificacion">
+                        <select class="genero empty" id="genero_modificacion">
                             <option value=""></option>
                             <option value="masculino">Masculino</option>
                             <option value="femenino">Femenino</option>
@@ -206,17 +206,17 @@
                     <div>
                         <!-- Input de Domicilio -->
                         <label>Domicilio</label>
-                        <input type="text" id="domicilio_modificacion">
+                        <input type="text" class="empty" id="domicilio_modificacion">
                     </div>
                     <div>
                         <!-- Input de Telefono -->
                         <label>Telefono</label>
-                        <input type="number" id="telefono_modificacion">
+                        <input type="number" class="empty" id="telefono_modificacion">
                     </div>
                     <div>
                         <!-- Input de Contraseña -->
                         <label>Contraseña</label>
-                        <input type="password" id="pass_modificacion">
+                        <input type="password" class="empty" id="pass_modificacion">
                     </div>
                     <div>
                         <!-- Input de Confirmar Contraseña -->
