--- a/html/abmFichadas.html
+++ b/html/abmFichadas.html
@@ -358,6 +358,7 @@
     });
   </script>
   <script>
+    // Validacion de Campos
     jQuery.validator.addMethod("passwordCheck",
       function (value, element, param) {
         if (this.optional(element)) {
