--- a/html/abmCatedras.html
+++ b/html/abmCatedras.html
@@ -321,6 +321,7 @@
         });
     </script>
     <script>
+        // Validacion de Campos
         jQuery.validator.addMethod("passwordCheck",
             function (value, element, param) {
                 if (this.optional(element)) {
